--- a/_config.yml
+++ b/_config.yml
@@ -2,6 +2,7 @@ title: "My TryHackMe Portfolio"
 description: "Cybersecurity notes, labs, and writeups"
 author: yourname
 theme: jekyll-theme-minimal
+remote_theme: Hacker
 
 # Optional extras
 markdown: kramdown
