--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-title: "My CTF Portfolio"
+title: "Chanchal Dev Nath"
 description: "Cybersecurity notes, labs, and writeups"
 author: yourname
 #theme: jekyll-theme-minimal
